syntax = "proto3";

package intercom;

option go_package = "github.com/edgelesssys/coco/internal/intercom";

service Intercom {
  rpc NewMeshCert(NewMeshCertRequest) returns (NewMeshCertResponse);
}

message NewMeshCertRequest {
  string PeerPublicKeyHash = 1;
}

message NewMeshCertResponse {
  bytes Cert = 1;
  repeated bytes CertChain = 2;
}
